color and cofirmation messages

--- a/TriadApp/templates/TriadApp/admin/manage_categories.html
+++ b/TriadApp/templates/TriadApp/admin/manage_categories.html
@@ -15,14 +15,14 @@
     <div class="bg-white shadow-md rounded-lg overflow-hidden">
         <table class="min-w-full divide-y divide-gray-200">
             <thead class="bg-gray-50">
-                <tr>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+                <tr class="bg-gray-800 text-white">
+                    <th class="px-6 py-3 text-left text-xs font-medium  uppercase tracking-wider">Name</th>
+                    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">Actions</th>
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200" id="categoriesTableBody">
                 {% for category in categories %}
-                <tr>
+                <tr >
                     <td class="px-6 py-4 whitespace-nowrap">{{ category.name }}</td>
                     <td class="px-6 py-4 text-sm">
                         <button onclick="openEditModal('{{ category.id }}')" 
