--- a/TriadApp/templates/TriadApp/admin/manage_suppliers.html
+++ b/TriadApp/templates/TriadApp/admin/manage_suppliers.html
@@ -59,7 +59,7 @@
                 </thead>
                 <tbody class="divide-y divide-gray-100">
                     {% for supplier in suppliers %}
-                    <tr class="hover:bg-gray-50">
+                    <tr class="hover:bg-gray-50 bg-white">
                         <td class="px-6 py-4 text-sm text-gray-900">
                             {{ supplier.firstname }} {{ supplier.middle_initial }}. {{ supplier.lastname }}
                         </td>
