--- a/TriadApp/templates/TriadApp/admin/admin.html
+++ b/TriadApp/templates/TriadApp/admin/admin.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-yellow-100">
     <div class="flex">
         <!-- Fixed toggle button that shows when sidebar is closed -->
         <button id="sidebarOpenBtn" class="fixed top-4 left-4 z-50 p-2 bg-gray-800 text-white rounded-md hover:bg-gray-700 hidden">
