--- a/TriadApp/templates/TriadApp/admin/admin_profile.html
+++ b/TriadApp/templates/TriadApp/admin/admin_profile.html
@@ -1,8 +1,8 @@
 {% extends 'TriadApp/admin/admin.html' %}
 
 {% block content %}
-<div class="flex-1 p-6">
-    <div class="max-w-3xl mx-auto bg-white/80 rounded-lg shadow p-6">
+<div class="flex-1 p-6 ">
+    <div class="max-w-3xl mx-auto bg-gray-50 rounded-lg shadow p-6">
         <h2 class="text-2xl font-bold mb-6">Admin Profile</h2>
         
         {% if messages %}
@@ -15,7 +15,7 @@
         </div>
         {% endif %}
 
-        <form method="POST" class="space-y-6">
+        <form method="POST" class="space-y-6 ">
             {% csrf_token %}
             
             <!-- Personal Information -->
