color and cofirmation messages

--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -84,10 +84,10 @@
                                     </div>
                                 {% endif %}
                             </div>
-                            <div>
+                            <div class="overflow-hidden">
                                 <p class="font-medium">{{ request.user.first_name }} {{ request.user.last_name }}</p>
                                 <p class="text-sm text-gray-400">Super Administrator</p>
-                                <p class="text-xs text-gray-400">{{ request.user.email }}</p>
+                                <p class="text-xs text-gray-400 ">{{ request.user.email }}</p>
                             </div>
                         </a>
                     </div>
