--- a/TriadApp/templates/TriadApp/superadmin/super_admin_profile.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin_profile.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="max-w-2xl mx-auto my-8">
-    <div class="bg-gradient-to-b from-orange-50 to-orange-100 rounded-2xl shadow-lg p-8">
+    <div class="bg-gray-100 from-orange-50 to-orange-100 rounded-2xl shadow-lg p-8">
         <!-- Profile Header -->
         <div class="text-center mb-8">
             <h1 class="text-2xl font-bold text-gray-800 mb-4">MANAGE PROFILE</h1>
